# S-Ave

./: README.md
semantic_maps/: CMakeLists.txt  package.xml  test.world
semantic_maps/config/: base_local_planner_params.yaml  costmap_common.yaml  costmap_common_params.yaml  diffdrive.yaml  global_costmap_params.yaml  local_costmap_params.yaml
semantic_maps/include/: platform.h
semantic_maps/include/semantic_maps/: ncnn_fast_rcnn.h  ncnn_hopenet.h  ncnn_posenet.h  ncnn_retinaface.h  ncnn_yolov5.h
semantic_maps/launch/: evaluation.launch  gazebo_robot.launch  gmapping.launch  hector_slam.launch  hector_slam_no_odom.launch  localization.launch  move_base.launch  platform.launch  rviz_robot.launch  s_ave.launch  yolov5l.launch
semantic_maps/maps/: apartment_4_map.pgm  apartment_4_map.yaml  phd_office_map.pgm  phd_office_map.yaml  prof_office_map.pgm  prof_office_map.yaml  rococo_lab_map.pgm  rococo_lab_map.yaml
semantic_maps/models/apartment_1/: model.config  model.sdf
semantic_maps/models/apartment_2/: model.config  model.sdf
semantic_maps/models/apartment_3/: model.config  model.sdf
semantic_maps/models/apartment_4/: model.config  model.sdf
semantic_maps/models/bathroom_set/: model.config  model.sdf
semantic_maps/models/bed/: model.config  model.sdf
semantic_maps/models/bed_fullsize/: model.config  model.sdf
semantic_maps/models/bed_king_1/: model.config  model.sdf
semantic_maps/models/book_shelf/: model.config  model.sdf
semantic_maps/models/books/: model.config  model.sdf
semantic_maps/models/bottle_water/: model.config  model.sdf
semantic_maps/models/boxes/: model.config  model.sdf
semantic_maps/models/burner_stove/: model.sdf
semantic_maps/models/cabinet_ikea_malm_big/: model.config  model.sdf
semantic_maps/models/car_blue_1/: model.config  model.sdf
semantic_maps/models/car_gray_1/: model.config  model.sdf
semantic_maps/models/car_gray_2/: model.config  model.sdf
semantic_maps/models/car_red_1/: model.config  model.sdf
semantic_maps/models/car_white_1/: model.config  model.sdf
semantic_maps/models/chair_fancy_1/: model.config  model.sdf
semantic_maps/models/chair_foldable/: model.config  model.sdf
semantic_maps/models/chair_modern_1/: model.config  model.sdf
semantic_maps/models/chair_park_1/: model.config  model.sdf
semantic_maps/models/desk_prof/: model.config  model.sdf
semantic_maps/models/desk_shared/: model.config  model.sdf
semantic_maps/models/drawer/: model.config  model.sdf
semantic_maps/models/drawer_kitchen_1/: model.config  model.sdf
semantic_maps/models/fountain_park_1/: model.config  model.sdf
semantic_maps/models/fridge/: model.config  model.sdf
semantic_maps/models/garage/: model.config  model.sdf
semantic_maps/models/grass_robocup/: model.config  model.sdf
semantic_maps/models/lamp_desk/: model.config  model.sdf
semantic_maps/models/lamp_street_1/: model.config  model.sdf
semantic_maps/models/laptop/: model.config  model.sdf
semantic_maps/models/microwave/: model.config  model.sdf
semantic_maps/models/milk/: model.config  model.sdf
semantic_maps/models/monitor_pc/: model.config  model.sdf
semantic_maps/models/office_chair/: model.config  model.sdf
semantic_maps/models/office_desk/: model.config  model.sdf
semantic_maps/models/park_big_1/: model.config  model.sdf
semantic_maps/models/pc/: model.config  model.sdf
semantic_maps/models/phd_office/: model.config  model.sdf
semantic_maps/models/plant_indoor/: model.config  model.sdf
semantic_maps/models/prof_office/: model.config  model.sdf
semantic_maps/models/rack_coat/: model.config  model.sdf
semantic_maps/models/refrigerator_white_1/: model.config  model.sdf
semantic_maps/models/restaurant/: model.config  model.sdf
semantic_maps/models/rococolab/: model.config  model.sdf
semantic_maps/models/salt/: model.config  model.sdf
semantic_maps/models/shelf/: model.config  model.sdf
semantic_maps/models/shower_big_1/: model.config  model.sdf
semantic_maps/models/shower_small_1/: model.config  model.sdf
semantic_maps/models/sink/: model.config  model.sdf
semantic_maps/models/sink_big_1/: model.config  model.sdf
semantic_maps/models/sofa_green_1/: model.config  model.sdf
semantic_maps/models/sofa_large_1/: model.config  model.sdf
semantic_maps/models/statue_tall_1/: model.config  model.sdf
semantic_maps/models/stove_4burners_1/: model.config  model.sdf
semantic_maps/models/table_2person_1/: model.config  model.sdf
semantic_maps/models/table_ikea_bjursta/: model.config  model.sdf
semantic_maps/models/table_restaurant/: model.config  model.sdf
semantic_maps/models/table_restaurant_4people/: model.config  model.sdf
semantic_maps/models/table_restaurant_6people/: model.config  model.sdf
semantic_maps/models/table_restaurant_8people/: model.config  model.sdf
semantic_maps/models/table_round_1/: model.config  model.sdf
semantic_maps/models/table_tv/: model.config  model.sdf
semantic_maps/models/test_apartment/: model.config  model.sdf
semantic_maps/models/test_apartment_2/: model.config  model.sdf
semantic_maps/models/toilet_white_1/: model.config  model.sdf
semantic_maps/models/tomato_sauce/: model.config  model.sdf
semantic_maps/models/trashcan/: model.config  model.sdf
semantic_maps/models/trashcan_park_1/: model.config  model.sdf
semantic_maps/models/tv_samsung/: model.sdf  (+1 more)
semantic_maps/msg/: LogicalImage.msg  Model.msg  Object.msg  SemanticMap.msg
semantic_maps/param/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  navfn_global_planner_params.yaml
semantic_maps/results/: rosmeery_plot.py  rosmeery_plot.sh
semantic_maps/rviz/: urdf.rviz
semantic_maps/scripts/: spawn_object.py
semantic_maps/src/: CMakeLists.txt
semantic_maps/urdf/: lucrezio.urdf.xacro  lucrezio_noGPU.urdf.xacro  lucrezio_with_logical.urdf.xacro  lucrezio_with_logical_noLaser.urdf.xacro  new_robot.urdf.xacro  test.urdf.xacro
semantic_maps/worlds/: apartment_4.world  phd_office.world  test_apartment.world
(+246 files in other folders)
